--- a/src/style/mainSection.css
+++ b/src/style/mainSection.css
@@ -1,151 +1,152 @@
 .mainUi {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .motorcyclesContainerMobile {
-    width: 92%;
-    align-items: center;
-    justify-content: center;
+  width: 92%;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttonContainerRightMobile {
-    display: block;
+  display: block;
 }
+
 .motorcyclesContainer,
 .buttonContainerRightDesktop {
-    display: none;
+  display: none;
 }
 
 .mainBodyHeader h1 {
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 22px;
-    text-align: center;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 22px;
+  text-align: center;
 }
 
 .mainBodyHeader {
-    margin-top: -3%;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-    padding-bottom: 2rem;
+  margin-top: -3%;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  padding-bottom: 2rem;
 }
 
-@media screen and (min-width:768px) {
-    .buttonContainerRightDesktop {
-        display: block;
-    }
+@media screen and (min-width: 768px) {
+  .buttonContainerRightDesktop {
+    display: block;
+  }
 
-    .mainUi {
-        display: grid;
-        grid-template-columns: 15fr 85fr;
-        height: 100vh;
-    }
+  .mainUi {
+    display: grid;
+    grid-template-columns: 15fr 85fr;
+    height: 100vh;
+  }
 
-    .motorcyclesContainer {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        height: 250px;
-    }
+  .motorcyclesContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    height: 250px;
+  }
 
-    .motorcyclesContainerMobile,
-    .buttonContainerRightMobile {
-        display: none;
-    }
-    .mainBodyHeader {
-        margin-top: -8%;
-        padding-bottom: 10rem;
-    }
-    .mainBodyHeader h1 {
-        font-size: 30px;
-    }
+  .motorcyclesContainerMobile,
+  .buttonContainerRightMobile {
+    display: none;
+  }
+
+  .mainBodyHeader {
+    margin-top: -8%;
+    padding-bottom: 10rem;
+  }
+
+  .mainBodyHeader h1 {
+    font-size: 30px;
+  }
 }
 
 .mainContainer {
-    display: grid;
-    grid-template-columns: 6fr 88fr 6fr;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 6fr 88fr 6fr;
+  align-items: center;
 }
 
 .mainBody {
-    align-items: center;
+  align-items: center;
 }
 
 .mainButton {
-    justify-content: center;
+  justify-content: center;
 }
 
 .buttonContainerLeft,
 .buttonContainerRight,
 .noneItemLeft,
 .noneItemRight {
-    background-color: #97BF11;
-    padding: 1rem 0.4rem 1rem 0.4rem;
+  background-color: #97bf11;
+  padding: 1rem 0.4rem 1rem 0.4rem;
 }
 
 .buttonContainerLeft,
 .noneItemLeft {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .buttonContainerRight,
 .noneItemRight {
-    justify-content: flex-start;
+  justify-content: flex-start;
 }
-
 
 .noneItemLeft,
 .noneItemRight {
-    background-color: whitesmoke;
+  background-color: whitesmoke;
 }
 
 .noneItemLeft button,
 .noneItemRight button {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .buttonContainerLeft button,
 .buttonContainerRight button {
-    border: transparent;
-    cursor: pointer;
-    background: transparent;
-    color: white;
-    transition: all 1s 2s;
+  border: transparent;
+  cursor: pointer;
+  background: transparent;
+  color: white;
+  transition: all 1s 2s;
 }
 
 .buttonContainerLeft,
 .noneItemLeft {
-    border-top-right-radius: 40px;
-    border-bottom-right-radius: 40px;
+  border-top-right-radius: 40px;
+  border-bottom-right-radius: 40px;
 }
 
 .buttonContainerRight,
 .noneItemRight {
-    border-top-left-radius: 40px;
-    border-bottom-left-radius: 40px;
+  border-top-left-radius: 40px;
+  border-bottom-left-radius: 40px;
 }
 
 .mainBodyHeader h5 {
-font-family: 'Noto Sans KR', sans-serif;
-font-size: 13px;
-color: rgba(163, 162, 162, 0.884);
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 13px;
+  color: rgba(163, 162, 162, 0.884);
 }
 
-
 .mainBodyHeader hr {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 #leftIcon,
 #rightIcon {
-    transform: scale(2.2);
+  transform: scale(2.2);
 }
 
 #leftIcon {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 #rightIcon {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
