--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -44,7 +44,8 @@
     width: 100%;
     opacity: 1;
     z-index: 2000;
-    overflow-y: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     color: black
   }
 
