--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -47,7 +47,7 @@
     z-index: 2000;
     overflow-x: hidden;
     overflow-y: scroll;
-    color: black
+    color: black;
   }
 
   .navContainer .navList .active {
@@ -56,18 +56,12 @@
 
   .navContainer footer {
     justify-content: center;
-
-    /* margin-top: 4rem; */
-
-    /* margin: 4rem 4% 0 4%; */
     padding: 0.3rem;
     background-color: #2e3a05;
     opacity: 0.8;
     position: fixed;
     width: 100%;
     bottom: 0;
-
-    /* border-radius: 16px; */
     color: white;
   }
 
@@ -76,20 +70,8 @@
   }
 
   .logoutingContainer {
-    /* height: 20%; */
-
-    /* background-color: white;
-    border: 1px solid #96bf119a; */
-
-    /* padding-left: 1rem; */
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-
-    /* align-items: center; */
-
-    /* justify-content: center; */
-
-    /* margin: -5rem 0.2rem 0.2rem 0.2rem; */
     gap: 1rem;
     border-radius: 16px;
   }
@@ -160,8 +142,6 @@ li {
   margin-top: 2rem;
   justify-content: center;
   padding: 0.5rem;
-
-  /* background-color: red; */
 }
 
 .footerNav ul {
@@ -191,8 +171,4 @@ footer ul li {
 #logoBtn {
   background-color: transparent;
   border: transparent;
-}
-
-#hamburrguerIcon {
-  /* background-color: red; */
 }
