--- a/src/style/motorcycle.css
+++ b/src/style/motorcycle.css
@@ -7,11 +7,6 @@
   justify-content: center;
 }
 
-/* .motorcycleDetailsContainer {
-  display: grid;
-  grid-template-columns: 5fr 70fr 25fr;
-  height: 100vh;
-} */
 .motorcycleDetailsContainer {
   display: grid;
   grid-template-columns: 5% 80% 15%;
@@ -23,14 +18,6 @@
   height: 50%;
   width: 50%;
 }
-
-/* .motorcycleDetailsContainerMain {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-} */
 
 .motorcycleDetailsContainerMain {
   display: flex;
@@ -49,6 +36,7 @@
   height: 75%;
   transition: all 1s ease-in-out;
 }
+
 .selectedItemPriceContainer {
   display: flex;
   flex-direction: column;
@@ -58,7 +46,7 @@
   gap: 0.5rem;
 }
 
-.selectedItemPriceContainer p{
+.selectedItemPriceContainer p {
   font-size: 10px;
   font-weight: 700;
   margin-right: 5rem;
@@ -69,6 +57,7 @@
   margin-top: 20%;
   text-align: end;
 }
+
 .detailsItemHeader h2 {
   text-transform: uppercase;
   font-size: 24px;
@@ -80,13 +69,13 @@
 .detailsItemBody {
   margin-top: 10rem;
   display: flex;
-  justify-content: flex-end;  
+  justify-content: flex-end;
 }
 
 .detailsItemBody button {
-  background-color: #97BF11;
+  background-color: #97bf11;
   color: white;
-  padding: 1rem 1.5rem 1rem 1.5rem ;
+  padding: 1rem 1.5rem 1rem 1.5rem;
   border-radius: 30px;
 }
 
@@ -231,13 +220,13 @@
 
   .detailsItemBody {
     margin-top: 20rem;
-  
   }
 
   .motorcycleDetailsContainerMain img {
     width: 100%;
     height: 100%;
   }
+
   .selectedItemPriceContainer {
     display: flex;
     flex-direction: row;
@@ -245,9 +234,10 @@
     margin: 2rem 0 0.5rem 0;
     background-color: rgba(167, 165, 165, 0.425);
   }
-  .selectedItemPriceContainer p{
+
+  .selectedItemPriceContainer p {
     font-size: 14px;
-    font-weight:400;
+    font-weight: 400;
     margin-right: 0;
     width: 100%;
   }
